--- a/src/components/Dashboard/Header.css
+++ b/src/components/Dashboard/Header.css
@@ -1,6 +1,6 @@
  
   .header {
-    background-color: #65CDE2;
+    background-color:rgb(101, 205, 226, 0.5);
     min-height: 3vh;
     display: flex;
     flex-direction: column;
@@ -32,6 +32,7 @@
     justify-content: center;
     vertical-align: center;
     opacity: 0.5;
+    cursor: pointer;
     /* border: 2px solid green; */
   }
 
@@ -41,6 +42,7 @@
     flex-direction: column;
     justify-content: center;
     vertical-align: center;
+    cursor: pointer;
     /* border: 2px solid green; */
   }
 
