Modification on the design of the header and creation of a state to display or not the header in function of the page displayed

--- a/src/components/AppBarReceiver.css
+++ b/src/components/AppBarReceiver.css
@@ -1,14 +1,12 @@
-/* .coverflow {
-    
-} */
-
 .coverflowParent > div:focus, .coverflow__container__1P-xE:focus {
     outline: none; 
 }
 
 .coverflow__container__1P-xE {
-    min-height: 225px;
-    height: auto;
+    /* height: 32vh !important; */
+    height: auto !important;
+    width: auto !important;
+    top: -20px;
     background-color: rgba(0, 0, 0, 0);
     padding-bottom: 20px;
     padding-top: 20px;
@@ -16,7 +14,6 @@
 
 .coverflow__figure__3bk_C, .coverflow__cover__25-7e {
     box-shadow: 0 0 0 !important; 
-    /* max-width: 180px; */
 }
 
 .coverflow__cover__25-7e {
@@ -25,11 +22,3 @@
     align-items: center;
     flex-direction: column;
 }
-/* 
-@media all and (max-width: 769px)
-{
-    .coverflow__container__1P-xE {
-        padding-top: 25px;
-        min-height: 150px;
-    }
-} */
