--- a/src/components/AppBarReceiver.css
+++ b/src/components/AppBarReceiver.css
@@ -17,8 +17,8 @@
 }
 
 .coverflow__cover__25-7e {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    flex-direction: column !important;
 }
